--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   
   <!-- CSS Style Sheets -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -52,10 +52,10 @@
         <div class="col-lg-6">
           <h1 class="big-heading" >Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-windows"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>  
         <div class="col-lg-6">
-          <img class="title-img" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-img" src="iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
@@ -101,22 +101,22 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-img" src="dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item container-fluid">          
           <h2 class="testimonial-text">Many of my friends has found their dog's match through TinDog's swipe right, so you cannot miss it.</h2>
-          <img class="testimonial-img" src="images/Swagat.jpg" alt="man-profile">
+          <img class="testimonial-img" src="Swagat.jpg" alt="man-profile">
           <em>Swagat, Leicester</em>
         </div>
         <div class="carousel-item container-fluid">          
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-img" src="lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
         <div class="carousel-item container-fluid">          
           <h2 class="testimonial-text">Unfortunately I didn't find a date but I am glad my dog did. Thanks TinDog.</h2>
-          <img class="testimonial-img" src="images/Deepraj.jpg" alt="man-profile">
+          <img class="testimonial-img" src="Deepraj.jpg" alt="man-profile">
           <em>Deepraj, Balasore</em>
         </div>
       </div>
@@ -138,10 +138,10 @@
   <!-- Press -->
 
   <section class="colored-section" id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -212,7 +212,7 @@
 
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg cta-download-button"><i class="fab fa-apple"></i> Download</button>
-      <button type="button" class="btn btn-light btn-lg cta-download-button"><i class="fab fa-windows"></i> Download</button>
+      <button type="button" class="btn btn-light btn-lg cta-download-button"><i class="fab fa-google-play"></i> Download</button>
 
     </div>
 
